--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^17.3.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "bootstrap": "^5.3.3",
+    "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.11",
@@ -35,6 +36,7 @@
     "@angular/cli": "^17.3.8",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jquery": "^3.5.31",
     "concurrently": "^9.0.1",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
