--- a/back/composer.json
+++ b/back/composer.json
@@ -9,6 +9,7 @@
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "spatie/flysystem-dropbox": "^3.0",
         "stripe/stripe-php": "^15.10"
     },
     "require-dev": {
