--- a/front/package.json
+++ b/front/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
+    "ngx-pagination": "^6.0.3",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
